# a2a-server

./: .dockerignore  .env.production  .gitignore  .pdm-python  Dockerfile  Makefile  README.md  agent-production.yaml  agent.yaml  fly.toml  mock_image_tools_server.py  mock_tools_config.json  pirate_agent.yaml  pyproject.toml  time_server_config.json  weather_server_config.json
debug_scripts/: debug_directory_structure.sh  debug_import.sh  debug_session_sharing.py  debug_simple.py  debug_smoke.sh  debug_smoke_test.sh  debug_sse.py  debug_time_agent.sh  debug_weather_agent.sh  diagnose_a2a.py  perplexity_test.py  simple_test.py  sse_mcp_diagnostic.py
docs/: chef_agent_card.json  pirate_agent_card.json
examples/: chuk_agent_demo.py  demo_image_session_management.py  google_adk_pirate_agent.py  pirate_agent.py  production_agent.py  production_resilient_agent.yaml  resilient_agent.py
scripts/: fix_null_const.py  fix_pydantic_generator.py  generate_models.sh  update_pyproject.py
src/a2a/: task_manager.py
src/a2a/client/: a2a_client.py  cli.py
src/a2a/client/chat/: __init__.py  chat_context.py  chat_handler.py  command_completer.py  ui_manager.py
src/a2a/client/chat/commands/: __init__.py  agent.py  connection.py  debug.py  help.py  tasks.py  utility.py
src/a2a/client/transport/: http.py  sse.py  stdio.py  websocket.py
src/a2a/client/ui/: __init__.py  colors.py  ui_helpers.py
src/a2a/json_rpc/: __init__.py  a2a_error_codes.py  a2a_errors.py  json_rpc_error_codes.py  json_rpc_errors.py  models.py  protocol.py  transport.py
src/a2a/models/: spec.py
src/a2a/server/: __init__.py  __main__.py  agent_card.py  app.py  arguments.py  cli.py  config.py  flow_diagnosis.py  handlers_setup.py  logging.py  methods.py  pubsub.py  run.py  task_manager.py
src/a2a/server/diagnosis/: __init__.py  debug_events.py  flow_diagnosis.py
src/a2a/server/routes/: __init__.py  debug.py  handlers.py  health.py
src/a2a/server/sample_agents/: __init__.py  chef_agent.py  pirate_agent.py
src/a2a/server/tasks/: discovery.py  task_handler.py  task_handler_registry.py  task_manager.py
src/a2a/server/tasks/handlers/: echo_handler.py  google_adk_handler.py
src/a2a/server/transport/: __init__.py  http.py  sse.py  stdio.py  ws.py
src/a2a_server/: app.py  deduplication.py  logging.py  main.py  methods.py  metrics.py  pubsub.py  run.py  session_store_factory.py
src/a2a_server/diagnosis/: flow_diagnosis.py
src/a2a_server/routes/: handlers.py  health.py  session_export.py  session_routes.py
src/a2a_server/sample_agents/: chuk_chef.py  chuk_pirate.py  chuk_researcher.py  perplexity_agent.mcp.json  perplexity_agent.py  time_agent.py  weather_agent.py
src/a2a_server/session/: image_session_manager.py
src/a2a_server/tasks/: discovery.py  task_manager.py
src/a2a_server/tasks/handlers/: resilient_handler.py  session_aware_task_handler.py  task_handler.py
src/a2a_server/tasks/handlers/adk/: adk_agent_adapter.py  google_adk_handler.py  session_enabled_adk_handler.py
src/a2a_server/tasks/handlers/chuk/: chuk_agent.py  chuk_agent_adapter.py  chuk_agent_handler.py  enhanced_conversation_manager.py  image_aware_agent_handler.py
src/a2a_server/transport/: http.py  sse.py
tests/: conftest.py  test_handlers_setup.py  test_methods.py  test_metrics.py  test_pubsub.py  test_run.py  test_task_manager.py
tests/client/: test_a2a_client.py  test_http.py  test_sse.py  test_stdio.py  test_websocket.py
tests/json_rpc/: __init__.py  test_models_and_errors.py  test_protocol.py
tests/routes/: test_app_routes.py  test_debug_routes.py  test_handler_routes.py  test_health_routes.py  test_isolated_routes.py  test_pubsub_routes.py  test_session_export_routes.py  test_session_routes.py
tests/server/: test_agent_card.py  test_methods.py  test_task_manager.py
tests/server/tasks/: test_discovery.py  test_task_handler_registry.py  test_task_manager.py
tests/server/tasks/handlers/: test_echo_handler.py  test_google_adk_handler.py
tests/server/transport/: test_http.py  test_sse.py  test_stdio.py  test_ws.py
tests/tasks/: test_discovery.py  test_task_handler_registry.py  test_task_manager.py
tests/tasks/handlers/: test_pirate_vision_handler.py  test_session_aware_task_handler.py  test_task_handler_registry.py  test_time_ticker_handler.py
tests/tasks/handlers/adk/: test_adk_agent_adapter.py  test_google_adk_handler.py  test_google_adk_protocol.py  test_session_enabled_adk_handler.py
tests/tasks/handlers/chuk/: test_chuk_agent.py  test_chuk_agent_adapter.py  test_chuk_agent_handler.py  test_chuk_agent_protocol.py
tests/transport/: test_http.py  test_sse.py  test_stdio.py  test_ws.py
